# TokenWiseDiff

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SYNTAX_FILE.md  build.sh  comparator.c  comparing_algorithm.c  main.c  syntax.c  syntax.h  t1.cpp  t2.cpp  tokens.h
.github/workflows/: main.yml
examples/: t1.cpp  t2.cpp
include/: comparator.h  comparing_algorithm.h  syntax.h  tokens.h
src/: Makefile  comparator.c  comparing_algorithm.c  executable  main.c  syntax.c
syntax/: c_cpp.syntax.twd  c_cpp.syntax.twdiff
wiki/: DocumentatieInfoeducatie.md
